--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -1,9 +1,5 @@
 /**** Diseño Realizado por Luisanaelena Marín ***/
-@font-face{
-  font-family: "Roboto";
-  src: local("../fonts/Roboto-BlackItalic.ttf");
-  font-weight: 700;
-}
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 body {
     background: #F2F2F2;
     font-family: 'Roboto' !important;
