--- a/public/template/css/main2.css
+++ b/public/template/css/main2.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 body {
     background: #F2F2F2;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Roboto' !important;
 }
 h2.sca:before {
     content: '';
