--- a/public/template/css/mainInstructor.css
+++ b/public/template/css/mainInstructor.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 body {
     background: #F2F2F2;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Roboto' !important;
 }
 h2.sca:before {
     content: '';
